--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.2.6",
+    "file-loader": "^6.2.0",
+    "html-loader": "^1.3.2",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^27.0.6",
     "mini-css-extract-plugin": "^1.6.2",
