--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --env=jsdom",
     "start": "node src/server/index.js",
     "build-prod": "webpack --config webpack.prod.js",
     "build": "webpack --config webpack.prod.js",
@@ -19,13 +19,19 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "regenerator-runtime": "^0.13.9",
+    "supertest": "^6.1.6",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
+    "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.2.6",
     "file-loader": "^6.2.0",
